--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp" android:color="?attr/colorOnSurfaceVariant" />
+    <solid android:color="?attr/colorSurfaceVariant" />
     <corners android:radius="8dp" />
-    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp" />
+    <stroke
+        android:width="1dp"
+        android:color="?attr/colorOutline" />
 </shape>
