--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
                             android:paddingStart="16dp"
                             android:paddingEnd="16dp"
                             android:paddingBottom="16dp"
-                            android:rowCount="3"
+                            android:rowCount="4"
                             android:visibility="visible">
 
                             <!-- Routine Button -->
@@ -276,6 +276,29 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="12dp"
                                     android:text="Ride Sharing" />
+
+                            </LinearLayout>
+
+                            <!-- To-Let Button -->
+                            <LinearLayout
+                                android:id="@+id/btnToLet"
+                                style="@style/GridButton"
+                                android:layout_row="3"
+                                android:layout_column="0">
+
+                                <ImageView
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:src="@drawable/ic_home_rent"
+                                    app:tint="?attr/colorPrimary" />
+
+                                <TextView
+                                    android:id="@android:id/text1"
+                                    style="@style/GridButtonText"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="12dp"
+                                    android:text="To-Let" />
 
                             </LinearLayout>
 
